# Itasha.Corp_F0RG3-W1R3

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  PRIVACY.md  README.md  SECURITY.md  deny.toml  packager.template.toml  ships-publicly-vs-never.md
.cargo/: audit.toml
.github/: BANNER.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  requirements-ci.txt  scorecard-notes.md  topics.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  package-bump.yml  release-verify.yml  release.yml  reproducible-build.yml  scorecard.yml  validate.yml  workflow-security.yml
apps/: c0pl4nd.toml  scribe.toml
branding/: INSTALLER-BRANDING.md  README.md  gen-assets.sh
docs/: binary-input-contract.md  coverage-reporting.md  key-custody.md  macos-gatekeeper.md  onboarding-a-new-app.md  portable-mode.md  release-runbook.md  reproducible-build.md  sbom.md  verify-cosign.md
docs/adr/: 0001-engine-cargo-packager.md  0002-reserved-wix-msi.md  0003-signing-posture.md  0004-production-hardening.md
installer/: .gitignore  Cargo.toml  README.md  build.rs
installer/src/: engine.rs  issue_intake.rs  main.rs  panic_hook.rs  reporting.rs  theme.rs
keys/: README.md
packaging/linux/: README.md  appimage-update.md  c0pl4nd.desktop  install.sh  org.itashacorp.C0PL4ND.metainfo.xml  org.itashacorp.C0PL4ND.yaml
packaging/macos/: README.md  sign-notarize-staple.sh
packaging/manifests/: README.md  update_manifests.py
packaging/manifests/homebrew/: c0pl4nd.rb  scr1b3.rb
packaging/manifests/scoop/: c0pl4nd.json  scr1b3.json
packaging/manifests/winget/: ItashaCorp.C0PL4ND.installer.yaml  ItashaCorp.C0PL4ND.locale.en-US.yaml  ItashaCorp.C0PL4ND.yaml  ItashaCorp.SCR1B3.installer.yaml  ItashaCorp.SCR1B3.locale.en-US.yaml  ItashaCorp.SCR1B3.yaml
packaging/windows/: options.nsh
packaging/windows/wix/: README.md  build-wix.ps1  license.rtf  product.wxs
scripts/: _sign-key-resolver.ps1  build.ps1  build.sh  build_native_installer.py  coverage.sh  gen-minisign-key.sh  gen-selfsigned-cert.ps1  reproducible-build.sh  sign-artifacts.sh  sign-cloud.ps1  sign-macos-adhoc.sh  sign-windows.ps1  verify.ps1  verify.sh
tests/: README.md  content_safety_audit.py  merge_config.py  test_merge_config.py  validate_config.py
tests/linux/: verify.sh
tests/macos/: verify.sh
tests/matrix/: _lib.sh
tests/windows/: matrix.ps1  sandbox.wsb
