[package]
name = "itasha-installer"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Itasha.Corp native CRT-themed installer (F0RG3-W1R3)"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "itasha-installer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
embed-manifest = "1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
